Header - html struktura

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
     <title>Layout</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="header__text-box">
+            <h1 class="heading-primary">
+                <span class="heading-primary--main">88 miles per hour</span>
+                <span class="heading-primary--sub">Where we're going we dont't need roads!</span>
+            </h1>
+        </div>
+    </header>
     <script src="js/main.js"></script>
 </body>
 </html>
