Sekcija text-wrapper nakon header-a

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             </h1>
         </div>
     </header>
+    <div class="text-wrapper">
+        <p>When did this happen and- Safe now, everything's let lined. Don't you lose those tapes now
+        record. Wup, wup, I almost forgot my luggage.</p>
+    </div>
     <script src="js/main.js"></script>
 </body>
 </html>
