--- a/index.html
+++ b/index.html
@@ -22,6 +22,23 @@
         <p>When did this happen and- Safe now, everything's let lined. Don't you lose those tapes now
         record. Wup, wup, I almost forgot my luggage.</p>
     </div>
+    <section class="main-wrapper">
+        <div class="main-wrapper__category--one">
+            <div class="order">1</div>
+            <div class="img-wrapper"></div>
+            <div class="info">
+                <h3>It will just happen</h3>
+                <p>My name's Lorraine, Lorraine Baines. Let's go. Why not? Precisely. Over there, on my hope chest. I've never seen purple
+                underwear before, Calvin.</p>
+            </div>
+        </div>
+        <div class="main-wrapper__category--two">
+        
+        </div>
+        <div class="main-wrapper__category--three">
+        
+        </div>
+    </section>
     <script src="js/main.js"></script>
 </body>
 </html>
