html struktura za layout - dorada

--- a/index.html
+++ b/index.html
@@ -23,21 +23,39 @@
         record. Wup, wup, I almost forgot my luggage.</p>
     </div>
     <section class="main-wrapper">
-        <div class="main-wrapper__category--one">
-            <div class="order">1</div>
-            <div class="img-wrapper"></div>
-            <div class="info">
-                <h3>It will just happen</h3>
-                <p>My name's Lorraine, Lorraine Baines. Let's go. Why not? Precisely. Over there, on my hope chest. I've never seen purple
-                underwear before, Calvin.</p>
+            <div class="order-one">1</div>
+            <div class="info info-one">
+                <h3>Behind sooner dining</h3>
+                <p>Behind sooner dining so window excuse he summer. Breakfast met certainty and fulfilled propriety led. Waited get
+                    either
+                    are wooded little her. Contrasted unreserved as mr particular collecting it everything as indulgence. Seems ask
+                    meant
+                    merry could put.</p>
+                </div>
+            <div class="img-wrapper-one"></div>
+            <div class="order-two">2</div>
+            <div class="img-wrapper-two"></div>
+            <div class="info info-two">
+                <h3>Advantage old had otherwise</h3>
+                <p>Advantage old had otherwise sincerity dependent additions. It in adapted natural hastily is justice. Six draw you
+                    him
+                    full not mean evil. Prepare garrets it expense windows shewing do an. She projection advantages resolution son
+                    indulgence.</p>
             </div>
-        </div>
-        <div class="main-wrapper__category--two">
-        
-        </div>
-        <div class="main-wrapper__category--three">
-        
-        </div>
+            <div class="info info-three">
+                <h3>Real sold my in call</h3>
+                <p>Real sold my in call. Invitation on an advantages collecting. But event old above shy bed noisy. Had sister see wooded
+                favour income has. Stuff rapid since do as hence. Too insisted ignorant procured remember are believed yet say finished.</p>
+            </div>
+            <div class="order-three">3</div>
+            <div class="img-wrapper-three"></div>
+            <div class="info info-four">
+                <h3>It will just happen</h3>
+                <p>My name's Lorraine, Lorraine Baines. Let's go. Why not? Precisely. Over there, on my hope chest. I've never seen
+                    purple
+                    underwear before, Calvin.</p>
+            </div>
+            <div class="order-four">4</div>
     </section>
     <script src="js/main.js"></script>
 </body>
