Struktura html layout-a - dorada

--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
             <div class="order-one">1</div>
             <div class="info info-one">
                 <h3>Behind sooner dining</h3>
-                <p>Behind sooner dining so window excuse he summer. Breakfast met certainty and fulfilled propriety led. Waited get
-                    either
-                    are wooded little her. Contrasted unreserved as mr particular collecting it everything as indulgence. Seems ask
+                <p>Behind sooner dining so window excuse he summer. Breakfast met certainty and fulfilled propriety led. Seems ask
                     meant
                     merry could put.</p>
                 </div>
@@ -51,9 +49,7 @@
             <div class="img-wrapper-three"></div>
             <div class="info info-four">
                 <h3>It will just happen</h3>
-                <p>My name's Lorraine, Lorraine Baines. Let's go. Why not? Precisely. Over there, on my hope chest. I've never seen
-                    purple
-                    underwear before, Calvin.</p>
+                <p>My name's Lorraine, Lorraine Baines. Let's go. Why not? Precisely. Over there, on my hope chest.</p>
             </div>
             <div class="order-four">4</div>
     </section>
