Footer adding span

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     two. Shy you who
                     scarcely expenses debating hastened resolved.
                 </p>
-                <p class="footer__text-info--highlight">#Zemeckis</p>
+                <p class="footer__text-info--highlight">#Zem<span>eckis</span></p>
             </div>
             <div class="footer__background"></div>
         </section>
